--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,6 @@
 /* Padding below the footer and lighter body text */
 
 body {
-  padding-bottom: 40px;
   color: #5a5a5a;
   font-family: 'Comfortaa', cursive;
   background: #240E00;
@@ -12,6 +11,10 @@ body {
 h1, h2, h3, h4, h5, h6 { font-family: 'Comfortaa', cursive; }
 
 h2, h3 { color: #FF6600; margin-bottom: 1.5em;}
+
+.title {text-align: center; margin: 1em auto;}
+
+.subtitle {text-align: center; letter-spacing: 5px; font-size: 1.5em;}
 
 /* CUSTOMIZE THE NAVBAR
 -------------------------------------------------- */
@@ -33,7 +36,7 @@ h2, h3 { color: #FF6600; margin-bottom: 1.5em;}
 .navbar-wrapper .navbar {
   padding-left: 15px;
   padding-right: 15px;
-  background: #240E00;
+  background: #000;
 }
 
 /* CUSTOMIZE THE CAROUSEL
@@ -115,6 +118,9 @@ h2, h3 { color: #FF6600; margin-bottom: 1.5em;}
   font-size: 1.5em;
 }
 
+.copy {
+  font-size: 1.5em;}
+
 .final {
   margin: 5em 0;
 }
@@ -125,10 +131,34 @@ h2, h3 { color: #FF6600; margin-bottom: 1.5em;}
 
 .footer {
   margin-top: 3em;
+  padding: 40px;
   text-align: center;
+  background: #000;
 }
 
 #fb {max-width: 50px;}
+
+.featured-photo {
+  width: 100%;
+  height: 500px;
+}
+
+.special {
+  background: #5a5a5a;
+  color: #FFF;
+  border: none;
+  font-size: 1em;
+}
+
+.special-btn {
+  background: #FF6600;
+  border: 1px solid #BF4C00;
+}
+
+.special-btn:hover {
+  background: #BF4C00;
+  border: 1px solid #BF4C00;
+}
 
 /* MARKETING CONTENT
 -------------------------------------------------- */
@@ -182,7 +212,8 @@ h2, h3 { color: #FF6600; margin-bottom: 1.5em;}
 
   /* Navbar positioning foo */
   .navbar-wrapper {
-    margin-top: 20px;
+    margin-top: 0px;
+    width: 100%;
   }
   .navbar-wrapper .container {
     padding-left:  15px;
@@ -195,7 +226,7 @@ h2, h3 { color: #FF6600; margin-bottom: 1.5em;}
 
   /* The navbar becomes detached from the top, so we round the corners */
   .navbar-wrapper .navbar {
-    border-radius: 4px;
+    border-radius: 0px;
   }
 
   /* Bump up size of carousel content */
